Bug 68186 - UI: Selecting the first subset while inserting a Special Character the last subset is selected
Summary: UI: Selecting the first subset while inserting a Special Character the last s...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.1.0.4 release
Hardware: Other All
: medium minor
Assignee: Ivan Timofeev (retired)
URL:
Whiteboard: target:4.2.0 target:4.1.2
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-08-16 13:20 UTC by Stephan van den Akker
Modified: 2013-08-17 23:22 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stephan van den Akker 2013-08-16 13:20:11 UTC
How to reproduce:
- Choose Insert -> Special Character
- In the Special Character choose any subset in the drop-down list
- Then choose the first subset in the drop-down list

Expected behaviour: 
The first characters in the font are shown

Actual behaviour:
The very last character in the font is selected.

Changing the selected font makes no difference.

Tested in: LO Version: 4.2.0.0.alpha0+
Build ID: f10f5ca011c3d06d3470b9e21bda13d505cfe93e
on openSuSE 11.4 (64-bit)
Comment 1 Ivan Timofeev (retired) 2013-08-17 06:28:50 UTC
Thanks for the report, fixed in master, proposed for 4.1.
Comment 2 Commit Notification 2013-08-17 06:29:36 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b12e0b522b7f13d15d2ce41dc1e99997c0159d53

fdo#68186: prevent integer underflow



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2013-08-17 10:47:51 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f5475f4f85bc6cae51cbd4424dcc7a35cc2ef2dc&h=libreoffice-4-1

fdo#68186: prevent integer underflow


It will be available in LibreOffice 4.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Stephan van den Akker 2013-08-17 23:22:00 UTC
Confirmed Resolved and fixed in

Version: 4.2.0.0.alpha0+
Build ID: f34881370ac9d9f499e00143ca840ba88021843f

On Ubuntu 12.04 (32-bit).

Thanks for the quick reaction, Ivan.