fdo#68186: prevent integer underflow

since commit eb1ecd8bc2936e28be852722d6cb0c9fb0baeac4 the Basic Latin subset
starts at 0, previously it started at 0x20.

Change-Id: I2fe0ee66438b8f11775b1bb8feab547b564622f0